--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 Django==4.2.13
+django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
