--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
 asgiref==3.8.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.2.13
 django-cors-headers==4.4.0
 django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+idna==3.7
 importlib_metadata==7.1.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.4
 Markdown==3.6
+MarkupSafe==2.1.5
+openapi-codec==1.3.2
+packaging==24.1
 PyJWT==2.8.0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.3
+simplejson==3.19.2
 sqlparse==0.5.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
 zipp==3.19.2
