--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+flake8==7.1.0
 idna==3.7
 importlib_metadata==7.1.0
 inflection==0.5.1
@@ -16,8 +17,11 @@ itypes==1.2.0
 Jinja2==3.1.4
 Markdown==3.6
 MarkupSafe==2.1.5
+mccabe==0.7.0
 openapi-codec==1.3.2
 packaging==24.1
+pycodestyle==2.12.0
+pyflakes==3.2.0
 PyJWT==2.8.0
 pytz==2024.1
 PyYAML==6.0.1
