--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
+click==8.1.7
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2.13
@@ -9,25 +10,30 @@ django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
-flake8==7.1.0
 idna==3.7
 importlib_metadata==7.1.0
 inflection==0.5.1
+isort==5.13.2
 itypes==1.2.0
 Jinja2==3.1.4
 Markdown==3.6
 MarkupSafe==2.1.5
 mccabe==0.7.0
+mypy-extensions==1.0.0
 openapi-codec==1.3.2
 packaging==24.1
+pathspec==0.12.1
+platformdirs==4.2.2
 pycodestyle==2.12.0
 pyflakes==3.2.0
 PyJWT==2.8.0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
+ruff==0.5.0
 simplejson==3.19.2
 sqlparse==0.5.0
+tomli==2.0.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
 zipp==3.19.2
